--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,8 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon" style="width: 50px; height: 50px;">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                            style="width: 50px; height: 50px;">
                     </div>
                     <h6 class="m-0 text-primary">ART SOUL COLIBRI</h6>
                 </a>
@@ -119,7 +120,8 @@
                                 <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
@@ -134,7 +136,8 @@
                                 <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
@@ -149,7 +152,8 @@
                                 <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
@@ -164,7 +168,8 @@
                                 <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
@@ -194,8 +199,6 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Quick links</h5>
-                        <a class="btn btn-link text-white-50" href="index.html">Who we are</a>
-                        <a class="btn btn-link text-white-50" href="reservations.html">Reservations</a>
                         <a class="btn btn-link text-white-50" href="index.html">Privacy Policy</a>
                         <a class="btn btn-link text-white-50" href="index.html">Terms and conditions</a>
                     </div>
@@ -203,28 +206,22 @@
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                         </div>
                     </div>
@@ -236,14 +233,6 @@
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights reserved.
                             Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="index.html">Home</a>
-                                <a href="index.html">Cookies</a>
-                                <a href="index.html">Help</a>
-                                <a href="index.html">FQAs</a>
-                            </div>
                         </div>
                     </div>
                 </div>
