--- a/cursos.html
+++ b/cursos.html
@@ -82,7 +82,8 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon" style="width: 50px; height: 50px;">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                            style="width: 50px; height: 50px;">
                     </div>
                     <h6 class="m-0 text-primary">ART SOUL COLIBRI</h6>
                 </a>
@@ -116,11 +117,14 @@
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                         <h1 class="mb-4">Cursos</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
+                            diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
+                            dolore erat amet</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3" href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">Contact</a>
+                        <a class="btn btn-primary py-3 px-5 mt-3"
+                            href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">Contact</a>
                     </div>
                 </div>
             </div>
@@ -128,93 +132,79 @@
         <!-- Cursos End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
-                <div class="row g-5">
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Porto, Portugal</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                        </div>
+        <div class=" container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+                            <div class="container py-5">
+                                <div class="row g-5">
+                                    <div class="col-lg-3 col-md-6">
+                                        <h5 class="text-white mb-4">Get in touch</h5>
+                                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Porto, Portugal</p>
+                                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
+                                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
+                                        <div class="d-flex pt-2">
+                                            <a class="btn btn-outline-light btn-social"
+                                                href="https://www.instagram.com/atelier_colibri"><i
+                                                    class="fab fa-instagram"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <h5 class="text-white mb-4">Quick links</h5>
+                                        <a class="btn btn-link text-white-50" href="index.html">Privacy Policy</a>
+                                        <a class="btn btn-link text-white-50" href="index.html">Terms and conditions</a>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <h5 class="text-white mb-4">Photo Gallery</h5>
+                                        <div class="row g-2 pt-2">
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                            <div class="col-4">
+                                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container">
+                                <div class="copyright">
+                                    <div class="row">
+                                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                                            &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights
+                                            reserved.
+                                            Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Quick links</h5>
-                        <a class="btn btn-link text-white-50" href="index.html">Who we are</a>
-                        <a class="btn btn-link text-white-50" href="reservations.html">Reservations</a>
-                        <a class="btn btn-link text-white-50" href="index.html">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="index.html">Terms and conditions</a>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Photo Gallery</h5>
-                        <div class="row g-2 pt-2">
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Footer End -->
+
+                    <!-- Back to Top -->
+                    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+                            class="bi bi-arrow-up"></i></a>
                 </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights reserved.
-                            Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="index.html">Home</a>
-                                <a href="index.html">Cookies</a>
-                                <a href="index.html">Help</a>
-                                <a href="index.html">FQAs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End -->
 
+                <!-- JavaScript Libraries -->
+                <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+                <script src="lib/wow/wow.min.js"></script>
+                <script src="lib/easing/easing.min.js"></script>
+                <script src="lib/waypoints/waypoints.min.js"></script>
+                <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-    </div>
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+                <!-- Template Javascript -->
+                <script src="js/main.js"></script>
 </body>
 
 </html>
