--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
+            <div class="container py-1">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
@@ -159,22 +159,22 @@
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel1.jpeg" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel2.jpeg" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel3.jpeg" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel4.jpeg" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel1.jpeg" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel2.jpeg" alt="">
                             </div>
                         </div>
                     </div>
