--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
                             style="width: 50px; height: 50px;">
                     </div>
-                    <h7 class="m-0 text-primary">ART SOUL COLIBRI</h7>
+                    <h7 class="m-0 text-primary">...</h7>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
