--- a/gallery.html
+++ b/gallery.html
@@ -81,11 +81,11 @@
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-                    <div class="icon p-2 me-2">
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
-                            style="width: 50px; height: 50px;">
+                    <div>
+                        <img class="img-fluid" src="img/logobarrnav.jpeg" alt="Icon"
+                            style="width: 200px; height: 55px;">
                     </div>
-                    <h7 class="m-0 text-primary">...</h7>
+                    <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
