--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
                         <img class="img-fluid" src="img/logobarrnav.jpeg" alt="Icon"
-                            style="width: 170px; height: 50px;">
+                            style="width: 150px; height: 50px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
                 </a>
@@ -202,6 +202,29 @@
                         <h5 class="text-white mb-4">Quick links</h5>
                         <a class="btn btn-link text-white-50" href="index.html">Privacy Policy</a>
                         <a class="btn btn-link text-white-50" href="index.html">Terms and conditions</a>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <h5 class="text-white mb-4">Photo Gallery</h5>
+                        <div class="row g-2 pt-2">
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel1.jpeg" alt="">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel2.jpeg" alt="">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel3.jpeg" alt="">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel4.jpeg" alt="">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel1.jpeg" alt="">
+                            </div>
+                            <div class="col-4">
+                                <img class="img-fluid rounded bg-light p-1" src="img/carrousel2.jpeg" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
