--- a/gallery.html
+++ b/gallery.html
@@ -69,8 +69,7 @@
 
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner"
-            class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -101,13 +100,12 @@
         </div>
         <!-- Navbar End -->
 
-        
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
             onclick="window.location.href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
-        <!-- Team Start -->
+        <!-- Gallery Start -->
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -182,7 +180,7 @@
                 </div>
             </div>
         </div>
-        <!-- Team End -->
+        <!-- Gallery End -->
 
          <!-- Footer Start -->
          <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
